fix: correct header menu on tablet and mobile

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h4 {
   left: 0;
   right: 0;
   padding: 30px 0 0;
+  z-index: 95;
 }
 .header__container {
   display: flex;
@@ -95,9 +96,9 @@ h4 {
   align-items: center;
   gap: 35px;
   margin: 0 2px 2px 0;
-  transition: opacity 0.3s;
+  transition: transform 4s ease-in;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .header__menu {
     width: 100%;
     height: 100%;
@@ -137,7 +138,17 @@ h4 {
 .header__menu-link_active::after {
   width: 100%;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
+  .header__menu-link {
+    font-size: 32px;
+    line-height: 160%;
+    color: #cdcdcd !important;
+  }
+  .header__menu-link::after {
+    background: #f1cdb3 !important;
+  }
+}
+@media (max-width: 768px) {
   .header__nav {
     position: fixed;
     top: 0;
@@ -151,8 +162,7 @@ h4 {
 .header__nav_open {
   transform: translateX(0);
   padding-left: 55px;
-  background: transparent;
-  z-index: 75;
+  background: rgba(41, 41, 41, 0.6);
   transition: 0.6s transform ease-in;
 }
 @media (max-width: 375px) {
@@ -164,14 +174,6 @@ h4 {
   .header__nav_open {
     padding-left: 0;
   }
-}
-.header__nav_open .header__menu-link {
-  font-size: 32px;
-  line-height: 160%;
-  color: #cdcdcd !important;
-}
-.header__nav_open .header__menu-link::after {
-  background: #f1cdb3 !important;
 }
 
 .hero {
@@ -904,7 +906,7 @@ h4 {
 .pets .burger__line {
   background: #000;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .pets .burger_open .burger__line {
     background: #f1cdb3;
   }
@@ -1087,7 +1089,7 @@ h4 {
   z-index: 100;
   transition: 0.6s transform ease-in;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .burger {
     display: flex;
   }
